# EventsFramework

./: CMakeLists.txt  README.md
cmake/: EventsFrameworkConfig.cmake
cpp/: EventLink.cpp  EventLink.h  IEventLink.cpp  IEventLink.h  NonBlockingNonReentrantPointerQueue.h  NonBlockingNonReentrantZeroCopyQueue.h  QueueEventDispatcher.h  QueueEventLink.h  QueuedClassEventLink.h
tests/: CMakeLists.txt
tests/cpp/: EventsFrameworkTests.cpp
